--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.13.1",
     "pcm-silence": "^1.1.0",
     "squelch-client": "^0.18.0",
-    "throttle": "^1.0.3"
+    "throttle": "^1.0.3",
+    "ytdl-core": "^0.7.16"
   }
 }
