--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "lib/index.js",
   "author": "Raymond Hammarling",
   "scripts": {
-    "lint": "eslint lib/ test/",
+    "lint": "eslint src/ test/",
     "test": "ava test/",
     "build": "babel -d lib/ src/",
     "pretest": "npm run lint",
