--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "onchange": "^2.5.0"
   },
   "dependencies": {
+    "end-of-stream": "^1.1.0",
     "fluent-ffmpeg": "^2.1.0",
     "got": "^6.3.0",
     "lodash": "^4.13.1",
