Implement using Deepstream as bridge between player and controller

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "onchange": "^2.5.0"
   },
   "dependencies": {
+    "deepstream.io-client-js": "^1.1.1",
     "end-of-stream": "^1.1.0",
     "fluent-ffmpeg": "^2.1.0",
     "got": "^6.3.0",
@@ -33,6 +34,7 @@
     "pcm-silence": "^1.1.0",
     "pify": "^2.3.0",
     "playmusic": "github:rahatarmanahmed/playmusic#aec7089fbf62725230538264e618025c1fcd2ae8",
+    "ramda": "^0.22.1",
     "squelch-client": "^0.18.0",
     "throttle": "^1.0.3",
     "ytdl-core": "^0.7.16"
