--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "minimist": "^1.2.0",
     "pcm-silence": "^1.1.0",
     "pify": "^2.3.0",
-    "playmusic": "github:rahatarmanahmed/playmusic#aec7089fbf62725230538264e618025c1fcd2ae8",
+    "playmusic": "2.1.1",
     "ramda": "^0.22.1",
     "squelch-client": "^0.18.0",
     "throttle": "^1.0.3",
