--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "baudio": "^2.1.2",
     "chance": "^1.0.4",
     "deepstream.io-client-js": "^1.1.1",
+    "discord.js": "^11.0.0",
     "end-of-stream": "^1.1.0",
     "fluent-ffmpeg": "^2.1.0",
     "got": "^6.3.0",
@@ -38,6 +39,7 @@
     "pify": "^2.3.0",
     "playmusic": "2.1.1",
     "ramda": "^0.22.1",
+    "rxjs": "^5.2.0",
     "squelch-client": "^0.18.0",
     "throttle": "^1.0.3",
     "ytdl-core": "^0.7.16"
